5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4171/executions/1594_2426.log
== TEST (2019-03-20 20:07:47) 
-- CODE:
tempo = float(input(tempo gasto:))
vmedia = float(input(velocidade media:))

distancia = float(vmedia / tempo)
litros = (distancia/12)

print(distancia)
print(litros)
-- ERROR:
File "XXXX", line 1
    tempo = float(input(tempo gasto:))
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 20:08:01) 
-- CODE:
tempo = float(input('tempo gasto:'))
vmedia = float(input('velocidade media:'))

distancia = float(vmedia / tempo)
litros = (distancia/12)

print(distancia)
print(litros)
-- OUTPUT:
11.11111111111111
0.9259259259259259
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 20:08:37) 
-- CODE:
tempo = float(input('tempo gasto:'))
vmedia = float(input('velocidade media:'))

distancia = float(vmedia / tempo)
litros = (distancia/12)

print(distancia)
print(litros)
-- OUTPUT:
11.11111111111111
0.9259259259259259
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 20:09:20) 
-- CODE:
tempo = float(input('tempo gasto:'))
v = float(input('velocidade media:'))

distancia = float(v / tempo)
litros = (distancia/12)

print(distancia,"km")
print(litros"l")
-- ERROR:
File "XXXX", line 8
    print(litros"l")
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 20:09:24) 
-- CODE:
tempo = float(input('tempo gasto:'))
v = float(input('velocidade media:'))

distancia = float(v / tempo)
litros = (distancia/12)

print(distancia,"km")
print(litros,"l")
-- OUTPUT:
11.11111111111111 km
0.9259259259259259 l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 20:09:38) 
-- CODE:
tempo = float(input('tempo gasto:'))
v = float(input('velocidade media:'))

distancia = float(v / tempo)
litros = (distancia/12)

print(distancia,"km")
print(litros,"l")
-- OUTPUT:
11.11111111111111 km
0.9259259259259259 l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 20:09:56) 
-- CODE:
tempo = float(input('tempo gasto:'))
v = float(input('velocidade media:'))

distancia = (v / tempo)
litros = (distancia/12)

print(distancia,"km")
print(litros,"l")
-- OUTPUT:
11.11111111111111 km
0.9259259259259259 l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 20:10:20) 
-- CODE:
tempo = float(input('tempo gasto:'))
v = float(input('velocidade media:'))

distancia = (v / tempo)
litros = (distancia/12)

print(distancia,"km")
print(round(litros,"l"),4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(litros,"l"),4)
TypeError: 'str' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 20:10:37) 
-- CODE:
tempo = float(input('tempo gasto:'))
v = float(input('velocidade media:'))

distancia = (v / tempo)
litros = (distancia/12)

print(distancia,"km")
print(litros,"l")
-- OUTPUT:
11.11111111111111 km
0.9259259259259259 l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 20:10:40) 
-- CODE:
tempo = float(input('tempo gasto:'))
v = float(input('velocidade media:'))

distancia = (v / tempo)
litros = (distancia/12)

print(distancia,"km")
print(litros,"l")
-- EXECUTION TIME:
0.193749
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
11.11111111111111 km
0.9259259259259259 l
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
24.0 km
2.0 l
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
66.66666666666667 km
5.555555555555556 l
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 20:10:45) 
-- CODE:
tempo = float(input('tempo gasto:'))
v = float(input('velocidade media:'))

distancia = (v / tempo)
litros = (distancia/12)

print(distancia,"km")
print(litros,"l")
-- OUTPUT:
11.11111111111111 km
0.9259259259259259 l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 20:10:50) 
-- CODE:
tempo = float(input('tempo gasto:'))
v = float(input('velocidade media:'))

distancia = (v / tempo)
litros = (distancia/12)

print(distancia,"km")
print(litros,"l")
-- EXECUTION TIME:
0.124247
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
11.11111111111111 km
0.9259259259259259 l
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
24.0 km
2.0 l
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
66.66666666666667 km
5.555555555555556 l
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 20:10:52) 
-- CODE:
tempo = float(input('tempo gasto:'))
v = float(input('velocidade media:'))

distancia = (v / tempo)
litros = (distancia/12)

print(distancia,"km")
print(litros,"l")
-- OUTPUT:
11.11111111111111 km
0.9259259259259259 l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 20:11:09) 
-- CODE:
tempo = float(input('tempo gasto:'))
v = float(input('velocidade media:'))

distancia = (v / tempo)
litros = (distancia*12)

print(distancia,"km")
print(litros,"l")
-- OUTPUT:
11.11111111111111 km
133.33333333333331 l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 20:11:24) 
-- CODE:
tempo = float(input('tempo gasto:'))
v = float(input('velocidade media:'))

distancia = (v / tempo)
litros = (distancia*0.08)

print(distancia,"km")
print(litros,"l")
-- OUTPUT:
11.11111111111111 km
0.8888888888888888 l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 20:11:49) 
-- CODE:
tempo = float(input('tempo gasto:'))
v = float(input('velocidade media:'))

distancia = (v / tempo)
litros = (distancia*0.08)

print(distancia,"km")
print(litros,"l")
-- OUTPUT:
11.11111111111111 km
0.8888888888888888 l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 20:12:09) 
-- CODE:
tempo = float(input('tempo gasto:'))
v = float(input('velocidade media:'))

distancia = (v / tempo)
litros = (distancia/12)

print(distancia,"km")
print(litros,"l")
-- OUTPUT:
11.11111111111111 km
0.9259259259259259 l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 20:12:13) 
-- CODE:
tempo = float(input('tempo gasto:'))
v = float(input('velocidade media:'))

distancia = (v / tempo)
litros = (distancia/12)

print(distancia,"km")
print(litros,"l")
-- OUTPUT:
11.11111111111111 km
0.9259259259259259 l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 20:13:36) 
-- CODE:
tempo = float(input('tempo gasto:',h))
v = float(input('velocidade media:'))

distancia = (v / tempo)
litros = (distancia/12)

print(distancia,"km")
print(litros,"l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    tempo = float(input('tempo gasto:',h))
NameError: name 'h' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 20:13:43) 
-- CODE:
tempo = float(input('tempo gasto:'))
v = float(input('velocidade media:'))

distancia = (v / tempo)
litros = (distancia/12)

print(distancia,"km")
print(litros,"l")
-- OUTPUT:
11.11111111111111 km
0.9259259259259259 l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 20:13:45) 
-- CODE:
tempo = float(input('tempo gasto:'))
v = float(input('velocidade media:'))

distancia = (v / tempo)
litros = (distancia/12)

print(distancia,"km")
print(litros,"l")
-- EXECUTION TIME:
0.201918
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
11.11111111111111 km
0.9259259259259259 l
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
24.0 km
2.0 l
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
66.66666666666667 km
5.555555555555556 l
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 20:17:16) 
-- CODE:
tempo = float(input('tempo gasto:'))
v = float(input('velocidade media:'))

distancia = (v / tempo)

litros = (distancia/12)

print(distancia,"km")
print(litros,"l")
-- OUTPUT:
11.11111111111111 km
0.9259259259259259 l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 20:17:29) 
-- CODE:
tempo = float(input('tempo gasto:'))
v = float(input('velocidade media:'))

distancia = (v / tempo)

litros = (distancia/12)

print(distancia,"km")
print(litros,"l")
-- OUTPUT:
11.11111111111111 km
0.9259259259259259 l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 20:18:22) 
-- CODE:
tempo = float(input('tempo gasto:'))
v = float(input('velocidade media:'))

distancia = (v / tempo)

litros = (distancia/12)

print(distancia,"km")
print(litros,"l")
-- OUTPUT:
11.11111111111111 km
0.9259259259259259 l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 20:18:33) 
-- CODE:
tempo = float(input('tempo gasto:'))
v = float(input('velocidade media:'))

distancia = (v / tempo)

litros = (distancia/12)

print(distancia)
print(litros)
-- OUTPUT:
11.11111111111111
0.9259259259259259
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 20:18:35) 
-- CODE:
tempo = float(input('tempo gasto:'))
v = float(input('velocidade media:'))

distancia = (v / tempo)

litros = (distancia/12)

print(distancia)
print(litros)
-- EXECUTION TIME:
0.181262
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
11.11111111111111
0.9259259259259259
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
24.0
2.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
66.66666666666667
5.555555555555556
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 20:18:37) 
-- CODE:
tempo = float(input('tempo gasto:'))
v = float(input('velocidade media:'))

distancia = (v / tempo)

litros = (distancia/12)

print(distancia)
print(litros)
-- OUTPUT:
11.11111111111111
0.9259259259259259
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 20:18:44) 
-- CODE:
tempo = float(input('tempo gasto:'))
v = float(input('velocidade media:'))

distancia = (v / tempo)

litros = (distancia/12)

print(distancia)
print(litros)
-- EXECUTION TIME:
0.133639
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
11.11111111111111
0.9259259259259259
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
24.0
2.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
66.66666666666667
5.555555555555556
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:16:21) 
-- CODE:
tempo = float(input('tempo gasto:'))
v = float(input('velocidade media:'))

distancia = (v / tempo)

litros = (distancia/12)

print(distancia)
print(litros)
-- OUTPUT:
11.11111111111111
0.9259259259259259
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:16:42) 
-- CODE:
tempo = float(input('tempo gasto:'))
v = float(input('velocidade media:'))

distancia = (v / tempo)

litros = (distancia/12)

print(distancia)
print(litros)
-- OUTPUT:
11.11111111111111
0.9259259259259259
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:16:48) 
-- CODE:
tempo = float(input('tempo gasto:'))
v = float(input('velocidade media:'))

distancia = (v / tempo)

litros = (distancia/12)

print(distancia)
print(litros)
-- OUTPUT:
11.11111111111111
0.9259259259259259
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:17:26) 
-- CODE:
tempo = float(input('tempo gasto:'))
v = float(input('velocidade media:'))

distancia = (v / tempo) * 10**3

litros = (distancia/12) * 10**3

print(distancia)
print(litros)
-- OUTPUT:
11111.111111111111
925925.925925926
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:17:32) 
-- CODE:
tempo = float(input('tempo gasto:'))
v = float(input('velocidade media:'))

distancia = (v / tempo) * 10**3

litros = (distancia/12) * 10**3

print(distancia)
print(litros)
-- OUTPUT:
11111.111111111111
925925.925925926
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:17:43) 
-- CODE:
tempo = float(input('tempo gasto:'))
v = float(input('velocidade media:'))

distancia = (v / tempo) * 10**4

litros = (distancia/12) * 10

print(distancia)
print(litros)
-- OUTPUT:
111111.11111111111
92592.59259259258
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:17:58) 
-- CODE:
tempo = float(input('tempo gasto:'))
v = float(input('velocidade media:'))

distancia = (v / tempo) * 10**4

litros = (distancia/12)

print(distancia)
print(litros)
-- OUTPUT:
111111.11111111111
9259.25925925926
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 23:18:03) 
-- CODE:
tempo = float(input('tempo gasto:'))
v = float(input('velocidade media:'))

distancia = (v / tempo) * 10**4

litros = (distancia/12)

print(distancia)
print(litros)
-- EXECUTION TIME:
0.210337
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
111111.11111111111
9259.25925925926
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
240000.0
20000.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
666666.6666666667
55555.55555555556
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:20:41) 
-- CODE:
tempo = float(input('tempo gasto:'))
v = float(input('velocidade media:'))

distancia = (v / tempo) * 10**4

litros = (distancia/12)

print(distancia)
print(litros)
-- OUTPUT:
111111.11111111111
9259.25925925926
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:21:07) 
-- CODE:
t = float(input('tempo gasto:'))
v = float(input('velocidade media:'))

distancia = (t / v) * 10**4

litros = (distancia/12)

print(distancia)
print(litros)
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 23:21:44) 
-- CODE:
t = float(input('tempo gasto:'))
v = float(input('velocidade media:'))

distancia = (v * t)
litros = (distancia/12)

print(distancia)
print(litros)
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 23:21:50) 
-- CODE:
t = float(input('tempo gasto:'))
v = float(input('velocidade media:'))

distancia = (v * t)
litros = (distancia/12)

print(distancia)
print(litros)
-- EXECUTION TIME:
0.160747
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
